fix: message overflow

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    overflow: none;
+    overflow: hidden;
 }
 
 .hidden{
@@ -27,7 +27,7 @@ body{
 }
 .message{
     display: flex;
-    width: calc(100vw - 16px);
+    width: calc(100% - 16px);
     flex-wrap: wrap;
     align-items: center;
     font-size: 14px;
@@ -35,7 +35,6 @@ body{
     font-weight: 400;
     color: #000000;
     margin-bottom: 4px;
-    overflow-x: none;
 }
 .message h1{
     color: #AAAAAA;
@@ -159,7 +158,7 @@ body{
     margin-top: 80px;
     margin-bottom: 80px;
     overflow-y: scroll;
-    overflow-x: none;
+    overflow-x: hidden;
 }
 /*!End of Chat*/
 
